# ml-learn

./: .env.example  .gitignore  README.md  docker-compose-freetier.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd-freetier.yml  cd.yml  ci.yml
helm/ml-pipeline/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/ml-pipeline/templates/: _helpers.tpl  gateway.yaml  grafana.yaml  kafka.yaml  ml-worker.yaml  namespace.yaml  prometheus.yaml
infra/grafana/dashboards/: ml-pipeline.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/prometheus/: prometheus-freetier.yml  prometheus.yml
infra/terraform/: main.tf
infra/terraform/free-tier/: main.tf
k8s/: gateway.yaml  grafana.yaml  kafka-init-job.yaml  kafka.yaml  ml-worker.yaml  namespace.yaml  prometheus.yaml
scripts/: load_test.py
services/gateway/: Dockerfile  app.py  config.py  metrics.py  requirements.txt
services/ml_worker/: Dockerfile  config.py  metrics.py  model.py  requirements.txt  worker.py
shared/: kafka_utils.py  logging_config.py  schemas.py
tests/: test_gateway.py  test_schemas.py
