[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Real-time ML inference pipeline with Kafka, FastAPI, and observability"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
